<resources>
    <string name="app_name">Mortar calculator</string>
    <string name="mortarNav">Mortar</string>
    <string name="indirectNav">Indirect</string>
    <string name="directNav">Direct</string>
    <string name="X">X:</string>
    <string name="Y">Y:</string>
    <string name="alt">Altitude:</string>
    <string name="digitsNotSelected">Select format</string>
    <string name="zeros">0000</string>
    <string name="zero">0</string>
    <string name="zeroDegrees">0°</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>
    <string name="elevation">Elevation</string>
    <string name="ok">OK</string>
    <string name="azimuth">Azimuth</string>
    <string-array name="digitsArray">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
