<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IndirectActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout">
        <Button
                android:text="@string/mortarNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonInd"
                android:layout_weight="1"
                android:onClick="onClickMortar"/>
        <Button
                android:text="@string/directNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDir"
                android:layout_weight="1" android:onClick="onClickDirect"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:orientation="vertical">
        <TextView
                android:text="Target coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/X"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:id="@+id/targetX"
                android:layout_marginHorizontal="20dp"
                android:textSize="36sp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/Y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:id="@+id/targetY"
                android:layout_marginHorizontal="20dp"
                android:textSize="36sp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/alt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:id="@+id/targetAlt"
                android:textAlignment="center"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>