<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity" style="android:attr/buttonBarStyle">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout">
        <Button
                android:text="@string/indirectNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonInd"
                android:layout_weight="1"
                android:onClick="onClickIndirect"/>
        <Button
                android:text="@string/directNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDir"
                android:layout_weight="1"
                android:onClick="onClickDirect"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout7">
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal" android:id="@+id/rg">

            <RadioButton
                android:id="@+id/butm224"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMortarSelected"
                android:text="M224" />

            <RadioButton
                android:id="@+id/but2b11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMortarSelected"
                android:text="2B11" />

            <RadioButton
                android:id="@+id/but2b14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMortarSelected"
                android:text="2B14" />

            <RadioButton
                android:id="@+id/butd30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMortarSelected"
                android:text="D-30" />

            <RadioButton
                android:id="@+id/butm252"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMortarSelected"
                android:text="M252" />
        </RadioGroup>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Coordinate digits:" />

            <Spinner
                android:id="@+id/digitsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/minMaxDist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>
        <TextView
                android:text="Mortar coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textColor="#000000"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/X"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digitsNotSelected"
                android:id="@+id/mortarX"
                android:layout_marginHorizontal="20dp"
                android:textSize="36sp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/Y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digitsNotSelected"
                android:id="@+id/mortarY"
                android:layout_marginHorizontal="20dp"
                android:textSize="36sp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/alt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>
        <EditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zero"
                android:id="@+id/mortarAlt"
                android:textAlignment="center"
                android:textSize="36sp"
                android:layout_marginHorizontal="20dp"/>

        <LinearLayout
            android:id="@+id/deflectionFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Az. of Fire"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/azOfFire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:hint="@string/zero"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Deflection"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/initDef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:hint="@string/zero"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonClear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:onClick="onClickClear"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
            android:layout_marginTop="16dp"/>

    <CheckBox
        android:id="@+id/checkDeflection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Use deflection"
        app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonClear" />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>